--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     <!-- navbar start -->
     <nav class="navbar">
-      <a href="#" class="navbar-logo">J&T Cargo <span>Batujajar</span>.</a>
+      <a href="#" class="navbar-logo">J&T Cargo <span>NGP014B</span>.</a>
 
       <div class="navbar-nav">
         <a href="#home">Home</a>
